--- a/index.html
+++ b/index.html
@@ -9,8 +9,8 @@
 <body>
     <h1>
         <ul>
-            <li> 12122</li>
-            <li>56464</li>
+            <li class="li"> 12122</li>
+            <li class="li">56464</li>
         </ul>
     </h1>
     <h2> правка</h2>
