--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="css/style.css">
     <title>testing</title>
 </head>
-<body>
+<body class="body">
     <h1>
         <ul>
             <li class="li"> 12122</li>
